build: main sections

--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
   </head>
 
   <body class="pagecrm_page">
+    <!-- header -->
+    <header class="pagecrm_header"></header>
+    <!-- main content -->
+    <main class="pagecrm_content">
+      <!-- Главный блок -->
+      <section class="pagecrm_main"></section>
+      <!-- Управление бизнес-процессами -->
+      <section class="pagecrm_managing-business"></section>
+      <!-- Оставить заявку -->
+      <section class="pagecrm_contact-us"></section>
+      <!-- Кому полезна CRM -->
+      <section class="pagecrm_benefits"></section>
+      <!-- CRM в бизнесе -->
+      <section class="pagecrm_business-cases"></section>
+      <!-- Стоимость подключения -->
+      <section class="pagecrm_pricing"></section>
+      <!-- Заявка на подбор -->
+      <section class="pagecrm_apply"></section>
+      <!-- Наш партнер -->
+      <section class="pagecrm_partners"></section>
+      <!-- Напишите нам -->
+      <section class="pagecrm_ask-question"></section>
+    </main>
+    <!-- footer -->
+    <footer class="pagecrm_footer"></footer>
     <script src="./js/script.js"></script>
   </body>
 </html>
