build: header layout, classes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,35 @@
 
   <body class="pagecrm_page">
     <!-- header -->
-    <header class="pagecrm_header"></header>
+    <header class="pagecrm_header">
+      <div class="pagecrm_logo-box">
+        <img class="pagecrm_logo-img" src="./images/logo.svg" alt="Логотип" />
+        <span class="pagecrm_phone-number">8 812 409-52-22</span>
+      </div>
+      <div class="pagecrm_search-menu-box">
+        <div class="pagecrm_burger-menu">
+          <button class="pagecrm_burger-btn" type="button">
+            <img class="pagecrm_burger-img" src="" alt="Иконка меню" />
+          </button>
+          <div class="pagecrm_popup-menu" id="popup-menu">
+            <nav class="pagecrm_popup-menu_navigation">
+              <a href="#" class="pagecrm_nav-link">Услуги</a>
+              <a href="#" class="pagecrm_nav-link">Кейсы</a>
+              <a href="#" class="pagecrm_nav-link">Ещё</a>
+              >
+            </nav>
+          </div>
+        </div>
+        <div>
+          <div class="pagecrm_searchbar">
+            <button class="pagecrm_searchbar-btn" type="button">
+              <img src="" alt="Поиск" />
+            </button>
+          </div>
+        </div>
+      </div>
+    </header>
+
     <!-- main content -->
     <main class="pagecrm_content">
       <!-- Главный блок -->
