--- a/index.html
+++ b/index.html
@@ -12,26 +12,31 @@
     <header class="pagecrm_header">
       <div class="pagecrm_logo-box">
         <img class="pagecrm_logo-img" src="./images/logo.svg" alt="Логотип" />
-        <span class="pagecrm_phone-number">8 812 409-52-22</span>
+        <a href="tel:88124095222" class="pagecrm_phone-number"
+          >8 812 409-52-22</a
+        >
       </div>
       <div class="pagecrm_search-menu-box">
         <div class="pagecrm_burger-menu">
           <button class="pagecrm_burger-btn" type="button">
-            <img class="pagecrm_burger-img" src="" alt="Иконка меню" />
+            <img
+              class="pagecrm_burger-img"
+              src="./images/icons/burger_btn.svg"
+              alt="Иконка меню"
+            />
           </button>
           <div class="pagecrm_popup-menu" id="popup-menu">
             <nav class="pagecrm_popup-menu_navigation">
               <a href="#" class="pagecrm_nav-link">Услуги</a>
               <a href="#" class="pagecrm_nav-link">Кейсы</a>
               <a href="#" class="pagecrm_nav-link">Ещё</a>
-              >
             </nav>
           </div>
         </div>
         <div>
           <div class="pagecrm_searchbar">
             <button class="pagecrm_searchbar-btn" type="button">
-              <img src="" alt="Поиск" />
+              <img src="./images/icons/search.svg" alt="Поиск" />
             </button>
           </div>
         </div>
