build: header blocks

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
         <div>
           <div class="pagecrm_searchbar">
             <button class="pagecrm_searchbar-btn" type="button">
-              <img src="./images/icons/search.svg" alt="Поиск" />
+              <img
+                class="pagecrm_searchbar-img"
+                src="./images/icons/search.svg"
+                alt="Иконка поиск"
+              />
             </button>
           </div>
         </div>
