build: header searchbox

--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
           </div>
         </div>
       </div>
+      <nav class="pagecrm_breadcrumbs">
+        <a class="pagecrm_breadcrumbs-link" href="https://alpham.pro/">Главная</a>
+        <img class="pagecrm_arrow-img" src="./images/icons/arrow.svg" alt="Иконка стрелка" />
+        <a class="pagecrm_breadcrumbs-link" href="https://alpham.pro/services/"
+          >Услуги Альфа маркетинг</a
+        >
+        <img class="pagecrm_arrow-img" src="./images/icons/arrow.svg" alt="Иконка стрелка" />
+        <a class="pagecrm_breadcrumbs-link" href="#">CRM</a>
+      </nav>
     </header>
 
     <!-- main content -->
