--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <!-- header -->
     <header class="pagecrm_header">
       <div class="pagecrm_logo-box">
-        <img class="pagecrm_logo-img" src="./images/logo.svg" alt="Логотип" />
+        <a class="pagecrm_logo-img" href="https://alpham.pro/"
+          ><img src="./images/logo.svg" alt="Логотип"
+        /></a>
         <a href="tel:88124095222" class="pagecrm_phone-number"
           >8 812 409-52-22</a
         >
@@ -46,13 +48,23 @@
         </div>
       </div>
       <nav class="pagecrm_breadcrumbs">
-        <a class="pagecrm_breadcrumbs-link" href="https://alpham.pro/">Главная</a>
-        <img class="pagecrm_arrow-img" src="./images/icons/arrow.svg" alt="Иконка стрелка" />
+        <a class="pagecrm_breadcrumbs-link" href="https://alpham.pro/"
+          >Главная</a
+        >
+        <img
+          class="pagecrm_arrow-img"
+          src="./images/icons/arrow.svg"
+          alt="Иконка стрелка"
+        />
         <a class="pagecrm_breadcrumbs-link" href="https://alpham.pro/services/"
           >Услуги Альфа маркетинг</a
         >
-        <img class="pagecrm_arrow-img" src="./images/icons/arrow.svg" alt="Иконка стрелка" />
-        <a class="pagecrm_breadcrumbs-link" href="#">CRM</a>
+        <img
+          class="pagecrm_arrow-img"
+          src="./images/icons/arrow.svg"
+          alt="Иконка стрелка"
+        />
+        <a class="pagecrm_breadcrumbs-link active" href="#">CRM</a>
       </nav>
     </header>
 
