build: header popup test version

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               alt="Иконка меню"
             />
           </button>
-          <div class="pagecrm_popup-menu" id="popup-menu">
+          <div id="popup-burger-menu" class="pagecrm_popup-menu">
             <nav class="pagecrm_popup-menu_navigation">
               <a href="#" class="pagecrm_nav-link">Услуги</a>
               <a href="#" class="pagecrm_nav-link">Кейсы</a>
@@ -37,13 +37,14 @@
         </div>
         <div>
           <div class="pagecrm_searchbar">
-            <button class="pagecrm_searchbar-btn" type="button">
+            <button class="pagecrm_searchbar-btn" type="submit">
               <img
                 class="pagecrm_searchbar-img"
                 src="./images/icons/search.svg"
                 alt="Иконка поиск"
               />
             </button>
+            <input class="pagecrm_searchbar-input" type="text" placeholder="поиск..." />
           </div>
         </div>
       </div>
