build: basic popup logic

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
               alt="Иконка меню"
             />
           </button>
-          <div id="popup-burger-menu" class="pagecrm_popup-menu">
+          <div class="pagecrm_popup-menu">
             <nav class="pagecrm_popup-menu_navigation">
-              <a href="#" class="pagecrm_nav-link">Услуги</a>
-              <a href="#" class="pagecrm_nav-link">Кейсы</a>
-              <a href="#" class="pagecrm_nav-link">Ещё</a>
+              <a href="#" class="pagecrm_nav-link">Тестовая версия</a>
+              <a href="#" class="pagecrm_nav-link">Функционала Popup</a>
+              <a href="#" class="pagecrm_nav-link">Без макета</a>
             </nav>
           </div>
         </div>
@@ -44,7 +44,11 @@
                 alt="Иконка поиск"
               />
             </button>
-            <input class="pagecrm_searchbar-input" type="text" placeholder="поиск..." />
+            <input
+              class="pagecrm_searchbar-input"
+              type="text"
+              placeholder="поиск..."
+            />
           </div>
         </div>
       </div>
